# seminario2_apnum

./: .gitignore  .latexmkrc  README.md  kk.py  main.tex  pyproject.toml  tasks.py
data/: DatosGlucosa.xlsx  GlucosaCoseno.csv
lagrange/: __init__.py  calcs.py  constantes.py  filtros.py  lagrange.py  normalizador.py  plots.py  tables.py  utils.py
slides/: base_lagrange.tex  diferencias_divididas.tex  ejemplo_error.tex  ejemplo_lagrange.tex  ejemplo_newton.tex  error.tex  glucosa.tex  lagrange.tex  newton.tex
