[tool.poetry]
name = "lagrange"
version = "0.1.0"
description = ""
authors = ["Mario Vago Marzal <mariovagomarzal@gmail.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
numpy = "^1.26.1"
pandas = "^2.1.1"
sympy = "^1.12"
openpyxl = "^3.1.2"

[tool.poetry.group.dev.dependencies]
invoke = "^2.2.0"
Pygments = "^2.16.1"
ruff = "^0.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
extend_exclude = ["__init__.py"]
